gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail19912b.d
version https://git-lfs.github.com/spec/v1
oid sha256:6b880b0317434126d2c4a3810cfc890e9babb458ea35a1b0bdcf7ff793dc861e
size 207
